--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,18 @@
 <resources>
-    <string name="app_name">Land Lease App</string>
+ <string name="app_name">LandLeaseLocator</string>
+    <string name="l_amp_l"><![CDATA[L&L]]></string>
+    <string name="land_amp_lease"><![CDATA[Land & Lease]]></string>
+    <string name="admin">admin</string>
+    <string name="user">user</string>
+
+    <string name="login">Login</string>
+    <string name="admin_login">Admin Login</string>
+    <string name="password">Password</string>
+    <string name="username">Username</string>
+    <string name="not_user"><u>not a user ! SignUp</u></string>
+    <string name="signup">SignUp</string>
+    <string name="email">Email</string>
+    <string name="retype">Retype Password</string>
+    <string name="already"><u>Already a user ? Login</u></string>
+
 </resources>
